	* R471: FIXED: A typo in tips&trick - lines are placed using the left mouse button, not middle. Thanks to Takeshi Hamasaki for spotting this.
	* R472: ADDED: previewprint::setupPrinting returns whether setup
	was successfull or not and checks if preview is still running
	        FIXED: create preview process only if it wasn't created already
		FIXED: print/preview: stop if preview is still running
		FIXED: delete form_ in IntPrinter destructor (does not remove the dialogpage though -- might lead to crashes!)
	* R473: ADDED: Japanese translation thanks to Takeshi Hamasaki.
	* R474: FIXED:
	  - Tuplet doesn't disappear anymore, when pasting it after the non-musical element anymore.
	  - Crash when pasting a tuplet into an empty staff.
	* R475: ADDED: Lines (cresc., trill, 8va) improvements:
	  - Double click in Insert line dialog selects the line and closes the dialog.
	  - Multiple line symbols per single chord now allowed.
	  - When in edit mode, the appropriate tab is now open and enabled according to which line the note has.
	  - Crescendo/Decrescendo's "Turn" checkbox is now refreshed correctly when selecting an element in edit mode.
	  - By default, if "Turn" flag is disabled, we place Decrescendo, if "Turn" flag is enabled, we place crescendo.
	* R476: ADDED: Double click selects the key in Insert key dialog. Resized Insert lines dialog a bit to fit other languages too.
	* R477: Updated docbook. Added Printing section.
	* R479: Updated lilyexport for trills
	* R480: FIXED: Syntax error in docbook.
	* R481: ADDED: convert-ly process before calling lilypond
	        FIXED: two formats were missing for the custom export formats
		FIXED: a more logical sequence for the export formats
	* R482: FIXED: ABC music export fixes. Now, Latin1() is called to convert from the original NoteEdit's internal UTF8 encodings for all the strings there are. Also, remove any non-alpha characters from staff names and other basic elements that prevent abcm2ps to compile the score.