@@ -106,7 +106,7 @@ void NABCExport::exportStaffs(QString fname, QPtrList<NStaff> *stafflist, int co
 	out_ << "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%" << endl;
 	out_ << "%                                  %" << endl;
 	out_ << "%   ABC music output generated by  %" << endl;
-	out_ << "%           \"noteedit\"             %" << endl;
+	out_ << "%           \"NoteEdit\"             %" << endl;
 	out_ << "%                                  %" << endl;
 	out_ << "%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%" << endl << endl;
 	out_ << "% PAGE LAYOUT" << endl;
@@ -177,19 +177,44 @@ void NABCExport::exportStaffs(QString fname, QPtrList<NStaff> *stafflist, int co
 
 	out_ << "X: 1" << endl;
 	if (!mainWidget->scTitle_.isEmpty()) {
-		out_ << "T: " << mainWidget->scTitle_.latin1() << endl;
+		out_ << "T: ";
+		if (abcOpts_.useUtf8Encoding)
+			out_ << mainWidget->scTitle_.utf8();
+		else
+			out_ << mainWidget->scTitle_.latin1();
+		out_ << endl;
 	}
 	if (!mainWidget->scSubtitle_.isEmpty()) {
-		out_ << "T: " << mainWidget->scSubtitle_.latin1() << endl;
+		out_ << "T: ";
+		if (abcOpts_.useUtf8Encoding)
+			out_ << mainWidget->scSubtitle_.utf8();
+		else
+			out_ << mainWidget->scSubtitle_.latin1();
+		out_ << endl;
 	}
 	if (!mainWidget->scAuthor_.isEmpty()) {
-		out_ << "C: " << mainWidget->scAuthor_.latin1() << endl;
+		out_ << "C: ";
+		if (abcOpts_.useUtf8Encoding)
+			out_ << mainWidget->scAuthor_.utf8();
+		else
+			out_ << mainWidget->scAuthor_.latin1();
+		out_ << endl;
 	}
 	if (!mainWidget->scLastAuthor_.isEmpty()) {
-		out_ << "C: " << mainWidget->scLastAuthor_.latin1() << endl;
+		out_ << "C: ";
+		if (abcOpts_.useUtf8Encoding)
+			out_ << mainWidget->scLastAuthor_.utf8();
+		else
+			out_ << mainWidget->scLastAuthor_.latin1();
+		out_ << endl;
 	}
 	if (!mainWidget->scCopyright_.isEmpty()) {
-		out_ << "C: copyright: " << mainWidget->scCopyright_.latin1() << endl;
+		out_ << "C: copyright: ";
+		if (abcOpts_.useUtf8Encoding)
+			out_ << mainWidget->scCopyright_.utf8();
+		else
+			out_ << mainWidget->scCopyright_.latin1();
+		out_ << endl;
 	}
 	outputMeter(stafflist->first()->getVoiceNr(0)->getFirstTimeSig(), true);
 	out_ << "L: 1/4 % default length" << endl;
@@ -390,10 +415,14 @@ bool NABCExport::writeFirstVoice(NVoice *voice_elem, QString staffName, int staf
 						(*lyricsLine_[i]) << " * ";
 					}
 					if (lyrics) {
-						(*lyricsLine_[i]) << lyrics2ABC(lyrics).latin1() << ' ';
+						if (abcOpts_.useUtf8Encoding)
+							(*lyricsLine_[i]) << lyrics2ABC(lyrics).utf8();
+						else
+							(*lyricsLine_[i]) << lyrics2ABC(lyrics).latin1();
+						(*lyricsLine_[i]) << ' ';
 					}
-				      }
-				      if ((diag = chord->getChordChordDiagram()) != 0) {
+			      }
+			      if ((diag = chord->getChordChordDiagram()) != 0) {
 					writeChord(diag);
 				      }
 				      writePendingSigns(idx);
@@ -1148,7 +1177,12 @@ void NABCExport::outputVoiceParams(NVoice *voice, QString staffName) {
 		staffName.replace ('\n', "\\n"); /* replace all newlines with \n two character symbols */
 		staffName.replace('"', "\\\""); /* replace all double quotes with \" two character symbols */	
 
-		out_ << "name=\"" << staffName.latin1() << '"';
+		out_ << "name=\"";
+		if (abcOpts_.useUtf8Encoding)
+			out_ << staffName.utf8();
+		else
+			out_ << staffName.latin1();
+		out_ << '"';
 	}
 }
 
